# wassail

./: .clang-format  .gitignore  .lgtm.yml  Doxyfile.in  Makefile.am  README.md  amount__free_8hpp_source.html  annotated.html  autogen.sh  catch-driver  check_8hpp_source.html  checks_2misc_2environment_8hpp_source.html  checks_2skeleton__check_2skeleton_8hpp_source.html  classes.html  classwassail_1_1check_1_1common-members.html  classwassail_1_1check_1_1common.html  classwassail_1_1check_1_1cpu_1_1core__count-members.html  classwassail_1_1check_1_1cpu_1_1core__count.html  classwassail_1_1check_1_1disk_1_1amount__free-members.html  classwassail_1_1check_1_1disk_1_1amount__free.html  classwassail_1_1check_1_1disk_1_1percent__free-members.html  classwassail_1_1check_1_1disk_1_1percent__free.html  classwassail_1_1check_1_1file_1_1permissions-members.html  classwassail_1_1check_1_1file_1_1permissions.html  classwassail_1_1check_1_1memory_1_1physical__size-members.html  classwassail_1_1check_1_1memory_1_1physical__size.html  classwassail_1_1check_1_1misc_1_1environment-members.html  classwassail_1_1check_1_1misc_1_1environment.html  classwassail_1_1check_1_1misc_1_1load__average-members.html  classwassail_1_1check_1_1misc_1_1load__average.html  classwassail_1_1check_1_1misc_1_1shell__output-members.html  classwassail_1_1check_1_1misc_1_1shell__output.html  classwassail_1_1check_1_1rules__engine-members.html  classwassail_1_1check_1_1rules__engine.html  classwassail_1_1check_1_1skeleton_1_1skeleton-members.html  classwassail_1_1check_1_1skeleton_1_1skeleton.html  classwassail_1_1data_1_1common-members.html  classwassail_1_1data_1_1common.html  classwassail_1_1data_1_1environment-members.html  classwassail_1_1data_1_1environment.html  (+214 more)
containers/: Dockerfile  Dockerfile.amazonlinux2-gnu  Dockerfile.amazonlinux2-llvm  Dockerfile.centos7  Dockerfile.centos7-gnu  Dockerfile.centos7-llvm  Dockerfile.centos8  Dockerfile.centos8-gnu  Dockerfile.centos8-llvm  Dockerfile.nvhpc  Dockerfile.oneapi  Dockerfile.rockylinux8-gnu  Dockerfile.rockylinux8-llvm  Dockerfile.ubuntu16  Dockerfile.ubuntu16-gnu  Dockerfile.ubuntu16-llvm  Dockerfile.ubuntu18  Dockerfile.ubuntu18-gnu  Dockerfile.ubuntu18-llvm  Dockerfile.ubuntu20-gnu  Dockerfile.ubuntu20-llvm  recipe.py
include/wassail/: Makefile.am  common.hpp  result.hpp  wassail.hpp
include/wassail/checks/: check.hpp  compare.hpp  rules_engine.hpp
include/wassail/checks/cpu/: core_count.hpp
include/wassail/checks/disk/: amount_free.hpp  percent_free.hpp
include/wassail/checks/file/: permissions.hpp
include/wassail/checks/memory/: physical_size.hpp
include/wassail/checks/misc/: environment.hpp  load_average.hpp  shell_output.hpp
include/wassail/data/: data.hpp  environment.hpp  getcpuid.hpp  getfsstat.hpp  getloadavg.hpp  getmntent.hpp  getrlimit.hpp  mpirun.hpp  nvml.hpp  osu_micro_benchmarks.hpp  pciaccess.hpp  pciutils.hpp  ps.hpp  remote_shell_command.hpp  shell_command.hpp  stat.hpp  stream.hpp  sysconf.hpp  sysctl.hpp  sysinfo.hpp  udev.hpp  umad.hpp  uname.hpp
include/wassail/fmt/: format.h
include/wassail/json/: json.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+79 more)
src/: Makefile.am  internal.hpp
src/checks/: Makefile.am  rules_engine.cpp
src/checks/cpu/: core_count.cpp
src/checks/disk/: amount_free.cpp  percent_free.cpp
src/checks/file/: permissions.cpp
src/checks/memory/: physical_size.cpp
src/checks/misc/: environment.cpp  load_average.cpp  shell_output.cpp
src/checks/skeleton_check/: skeleton.cpp  skeleton.hpp
src/common/: Makefile.am  initialize.cpp  logger.cpp  parallel.cpp  result.cpp  version.cpp
src/data/: Makefile.am  data.cpp  environment.cpp  environment.json  factory.cpp  getcpuid.cpp  getcpuid.json  getfsstat.cpp  getfsstat.json  getloadavg.cpp  getloadavg.json  getmntent.cpp  getmntent.json  getrlimit.cpp  getrlimit.json  mpirun.cpp  mpirun.json  nvml.cpp  nvml.json  osu_micro_benchmarks.cpp  osu_micro_benchmarks.json  pciaccess.cpp  pciaccess.json  pciutils.cpp  pciutils.json  ps.cpp  ps.json  remote_shell_command.cpp  remote_shell_command.json  shell_command.cpp  shell_command.json  stat.cpp  stat.json  stream.cpp  stream.json  sysconf.cpp  sysconf.json  sysctl.cpp  sysctl.json  sysinfo.cpp  (+7 more)
src/data/skeleton_data/: skeleton.cpp  skeleton.hpp  skeleton.json
src/python/: Makefile.am  check.cpp  data.cpp  enum.cpp  json.cpp  pybind.cpp  result.cpp
src/samples/: Makefile.am
src/samples/c++/: Makefile.in  check.cpp  compare-all.cpp  compare.cpp  core-count.cpp  dump-async.cpp  dump.cpp  environment.cpp  print.cpp  standalone.cpp  stream.cpp
src/samples/python/: check.py  core-count.py  dump.py  environment.py  rest_server.py  standalone.py  stream.py
test/: Makefile.am  test_format.cpp  test_internal.cpp  test_result.cpp  test_version.cpp  tostring.h
test/checks/: Makefile.am  test_compare.cpp  test_cpu_core_count.cpp  test_disk_amount_free.cpp  test_disk_percent_free.cpp  test_file_permissions.cpp  test_memory_physical_size.cpp  test_misc_environment.cpp  test_misc_load_average.cpp  test_misc_shell_output.cpp  test_rules_engine.cpp
test/data/: Makefile.am  stream  test_environment.cpp  test_getcpuid.cpp  test_getfsstat.cpp  test_getloadavg.cpp  test_getmntent.cpp  test_getrlimit.cpp  test_mpirun.cpp  test_nvml.cpp  test_osu_micro_benchmarks.cpp  test_pciaccess.cpp  test_pciutils.cpp  test_ps.cpp  test_remote_shell_command.cpp  test_shell_command.cpp  test_stat.cpp  test_stream.cpp  test_sysconf.cpp  test_sysctl.cpp  test_sysinfo.cpp  test_udev.cpp  test_umad.cpp  test_uname.cpp
test/python/: Makefile.am  test_check_cpu_core_count.py  test_check_disk_amount_free.py  test_check_disk_percent_free.py  test_check_file_permissions.py  test_check_memory_physical_size.py  test_check_misc_environment.py  test_check_misc_load_average.py  test_check_misc_shell_output.py  test_check_rules_engine.py  test_data.py  test_result.py  test_version.py
(+303 files in other folders)
