pkginclude_HEADERS = wassail.hpp

nobase_pkginclude_HEADERS = common.hpp result.hpp
EXTRA_DIST =

# Checks
nobase_pkginclude_HEADERS += checks/check.hpp
nobase_pkginclude_HEADERS += checks/compare.hpp
nobase_pkginclude_HEADERS += checks/rules_engine.hpp
nobase_pkginclude_HEADERS += checks/cpu/core_count.hpp
nobase_pkginclude_HEADERS += checks/disk/amount_free.hpp
nobase_pkginclude_HEADERS += checks/disk/percent_free.hpp
nobase_pkginclude_HEADERS += checks/memory/physical_size.hpp
nobase_pkginclude_HEADERS += checks/misc/environment.hpp
nobase_pkginclude_HEADERS += checks/misc/load_average.hpp

# Data sources
nobase_pkginclude_HEADERS += data/data.hpp
nobase_pkginclude_HEADERS += data/environment.hpp
nobase_pkginclude_HEADERS += data/getcpuid.hpp
nobase_pkginclude_HEADERS += data/getfsstat.hpp
nobase_pkginclude_HEADERS += data/getloadavg.hpp
nobase_pkginclude_HEADERS += data/getmntent.hpp
nobase_pkginclude_HEADERS += data/getrlimit.hpp
nobase_pkginclude_HEADERS += data/pciaccess.hpp
nobase_pkginclude_HEADERS += data/pciutils.hpp
nobase_pkginclude_HEADERS += data/ps.hpp
nobase_pkginclude_HEADERS += data/remote_shell_command.hpp
nobase_pkginclude_HEADERS += data/shell_command.hpp
nobase_pkginclude_HEADERS += data/stat.hpp
nobase_pkginclude_HEADERS += data/stream.hpp
nobase_pkginclude_HEADERS += data/sysconf.hpp
nobase_pkginclude_HEADERS += data/sysctl.hpp
nobase_pkginclude_HEADERS += data/sysinfo.hpp
nobase_pkginclude_HEADERS += data/umad.hpp
nobase_pkginclude_HEADERS += data/uname.hpp

# Third party
nobase_pkginclude_HEADERS += json/json.hpp
nobase_pkginclude_HEADERS += fmt/core.h
nobase_pkginclude_HEADERS += fmt/format.h
nobase_pkginclude_HEADERS += fmt/format-inl.h
EXTRA_DIST += json/.clang-format fmt/.clang-format
