samplesdir = $(pkgdatadir)/samples

nobase_dist_samples_DATA = c++/Makefile \
                           c++/check.cpp \
                           c++/compare.cpp \
                           c++/compare-all.cpp \
                           c++/dump.cpp \
                           c++/dump-async.cpp \
                           c++/environment.cpp \
                           c++/print.cpp \
                           c++/standalone.cpp

nobase_dist_samples_DATA += python/check.py \
                            python/dump.py \
                            python/environment.py \
                            python/rest_server.py \
                            python/standalone.py
