samplesdir = $(pkgdatadir)/samples

nobase_dist_samples_DATA = c++/Makefile \
                           c++/check.cpp \
                           c++/core-count.cpp \
                           c++/dump.cpp \
                           c++/dump-async.cpp \
                           c++/environment.cpp \
                           c++/print.cpp \
                           c++/standalone.cpp \
                           c++/stream.cpp

nobase_dist_samples_DATA += python/check.py \
                            python/core-count.py \
                            python/dump.py \
                            python/environment.py \
                            python/rest_server.py \
                            python/standalone.py \
                            python/stream.py
